--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -8,57 +8,53 @@
 /* You can override the default Infima variables here. */
 /* Pick the relevant colors here: https://docusaurus.io/docs/styling-layout#styling-your-site-with-infima */
 :root {
-  --ifm-color-primary-lightest: #19938e;
-  --ifm-color-primary-lighter: #16827d;
-  --ifm-color-primary-light: #157c78;
-  --ifm-color-primary: #13716d;
-  --ifm-color-primary-dark: #116662;
-  --ifm-color-primary-darker: #10605d;
-  --ifm-color-primary-darkest: #0d4f4c;
-  --ifm-link-color: #059669;
+  --ifm-color-primary-lightest: #2f58db;
+  --ifm-color-primary-lighter: #224ac9;
+  --ifm-color-primary-light: #2146c1;
+  --ifm-color-primary: #1e40af;
+  --ifm-color-primary-dark: #1b3a9d;
+  --ifm-color-primary-darker: #193695;
+  --ifm-color-primary-darkest: #152d7b;
+  --ifm-link-color: #1e6ff5;
   --ifm-menu-color: #6b7280;
   --ifm-toc-link-color: #94a3b8;
-  --ifm-menu-color-background-active: #ecfdf5;
-  --ifm-code-background: #f0fdfa;
+  --ifm-menu-color-background-active: #dbeafe;
+  --ifm-code-background: #eff6ff;
 
-  --plum-color: #ba0d49;
+  --no-color: #ea580c;
 
   --hr-color: #e5e7eb;
-  --feedback-yes-color: #13716d;
-  --feedback-no-color: var(--plum-color);
+  --feedback-yes-color: #2563eb;
+  --feedback-no-color: var(--no-color);
 }
-
-/* plum: #ba0d49,
-plum-light: #dd105a,
-plum very light: #f8cdbe7,
- */
 
 /* dark theme variables */
 html[data-theme="dark"] {
-  --ifm-color-primary-lightest: #f784b4;
-  --ifm-color-primary-lighter: #f45b9b;
-  --ifm-color-primary-light: #f34d93;
-  --ifm-color-primary: #dd2572;
-  --ifm-color-primary-dark: #ef1771;
-  --ifm-color-primary-darker: #e8106a;
-  --ifm-color-primary-darkest: #bf0d57;
+  --ifm-color-primary-lightest: #fba365;
+  --ifm-color-primary-lighter: #fa8b3e;
+  --ifm-color-primary-light: #fa8330;
+  --ifm-color-primary: #f97316;
+  --ifm-color-primary-dark: #ee6506;
+  --ifm-color-primary-darker: #e15f06;
+  --ifm-color-primary-darkest: #b94f05;
 
   --ifm-heading-color: #fff;
 
-  --ifm-link-color: #ff227e;
+  --ifm-link-color: #fb923c;
 
-  --ifm-toc-link-color: #ced2d8;
+  --ifm-toc-link-color: #fff7ed;
 
-  --ifm-menu-color: #e2dfdf;
-  --ifm-menu-color-active: #f0287c;
+  --ifm-menu-color: #fff7ed;
+  --ifm-menu-color-active: #fb923c;
   --ifm-menu-color-background-active: #383838;
 
   --ifm-code-background: #605c5c;
 
-  --plum-color: #e4467d;
+  --no-color: #f97316;
 
   --hr-color: #334155;
-  --feedback-yes-color: #38b8b1;
+  --feedback-yes-color: #3b82f6;
+  --feedback-no-color: var(--no-color);
 }
 
 /* All the relevant class names can be found here: https://docusaurus.io/docs/styling-layout#theme-class-names */
@@ -106,7 +102,7 @@ h6,
 }
 
 .table-of-contents__link--active {
-  color: var(--plum-color) !important;
+  color: var(--no-color) !important;
 }
 
 .theme-last-updated {
